Resolve function name conflicts

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
     }
    ],
    "source": [
-    "def process_image(img):\n",
+    "def find_lane_from_image(img):\n",
     "    result_image = None\n",
     "    #img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "\n",
@@ -390,7 +390,7 @@
     "    # process\n",
     "    img = mpimg.imread(\"test_images/{}\".format(file))\n",
     "\n",
-    "    result_img = process_image(img)\n",
+    "    result_img = find_lane_from_image(img)\n",
     "\n",
     "    cv2.imwrite(\"{}/{}\".format(output_dir, file), result_img)\n",
     "    print(file)\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
     "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
-    "\n",
+    "    process_image(image)\n",
     "    return result"
    ]
   },
