--- a/P1.ipynb
+++ b/P1.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0e0c022160>"
+       "<matplotlib.image.AxesImage at 0x7fc2f950b6a0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        " 'solidYellowLeft.jpg']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:12<00:00, 16.94it/s]\n"
+      "100%|█████████▉| 221/222 [00:13<00:00, 16.27it/s]\n"
      ]
     },
     {
@@ -580,8 +580,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
       "\n",
-      "CPU times: user 4.96 s, sys: 2.03 s, total: 6.98 s\n",
-      "Wall time: 13.7 s\n"
+      "CPU times: user 5.19 s, sys: 2.02 s, total: 7.21 s\n",
+      "Wall time: 14.5 s\n"
      ]
     }
    ],
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 681/682 [00:39<00:00, 13.77it/s]\n"
+      "100%|█████████▉| 681/682 [00:37<00:00, 17.82it/s]\n"
      ]
     },
     {
@@ -679,8 +679,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft.mp4 \n",
       "\n",
-      "CPU times: user 14.4 s, sys: 5.86 s, total: 20.3 s\n",
-      "Wall time: 41.1 s\n"
+      "CPU times: user 14.4 s, sys: 5.78 s, total: 20.2 s\n",
+      "Wall time: 38.4 s\n"
      ]
     }
    ],
@@ -698,9 +698,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/solidYellowLeft.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
@@ -731,11 +748,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video test_videos_output/challenge.mp4\n",
+      "[MoviePy] Writing video test_videos_output/challenge.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 251/251 [00:24<00:00, 10.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
+      "\n",
+      "CPU times: user 8.57 s, sys: 2.78 s, total: 11.4 s\n",
+      "Wall time: 27.2 s\n"
+     ]
+    }
+   ],
    "source": [
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
@@ -750,11 +792,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/challenge.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
